# BlogAPI

./: .env  .gitignore  Dockerfile  SERVER_COFIG  SERVER_CONFIG  docker-compose.yml  env_copy  prometheus.yml  pyproject.toml  req.txt  requirements.txt
.github/workflows/: cd.yml
apps/: models.py  permissions.py  serializers.py  urls.py  views.py
apps/urls/: __init__.py  answer.py  block.py  comments.py  question.py
apps/views/: __init__.py  answer.py  block.py  blog.py  comments.py  question.py
authentication/: admin.py  models.py  serializers.py  services.py  tasks.py  urls.py  utils.py  views.py
authentication/urls/: __init__.py  auth.py  follow_notification.py  users.py
authentication/views/: __init__.py  auth.py  follow_notification.py  users.py
core/: config.py  utils.py
root/: celery.py  settings.py  urls.py
templates/: verification_email.html
